feature: эндпоинты групп и пользователей в чате готовы
